--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-items: center;
-  align-content: center;
+* {
+    border-radius: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+    display: flex;
+    flex-direction: column;
+    height: 90px;
+    width: 700px;
+    background-color: rgba(178, 75, 238, 0.267);
+    text-align: center;
+    color: rgba(255, 255, 255, 0.692);
+    font-size: 75px;
+    text-shadow: 10px 12px rgba(13, 48, 59, 0.767);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a {
+    color: rgba(255, 255, 255, 0.801);
+    font-size: 30px;
+    text-shadow: 2px 5px rgb(5, 34, 44);
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 200px;
 }
 
-img {
-  width: 200px;
-  height: 200px;
+img{
+    width: 350px;
+    height: 300px;
+    opacity: 90%;
+}
+
+table {
+    border: solid 1px rgba(240, 237, 237, 0.671);
+}
+
+th {
+    border: solid 1px rgba(240, 237, 237, 0.671);
+}
+
+td {
+    border: solid 1px rgba(240, 237, 237, 0.671);
 }
