--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,36 @@
-* {
-    border-radius: 10px;
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-content: center;
 }
 
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
 body {
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -9,19 +38,6 @@ body {
     justify-content: center;
     align-items: center;
 }
-
-header {
-    display: flex;
-    flex-direction: column;
-    height: 90px;
-    width: 700px;
-    background-color: rgba(178, 75, 238, 0.267);
-    text-align: center;
-    color: rgba(255, 255, 255, 0.692);
-    font-size: 75px;
-    text-shadow: 10px 12px rgba(13, 48, 59, 0.767);
-}
-
 img{
     width: 350px;
     height: 300px;
