--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
 .App {
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-items: center;
-  align-content: center;
 }
 
 .App-logo {
@@ -31,6 +27,16 @@
 .App-link {
   color: #61dafb;
 }
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -41,5 +47,7 @@ body {
 img{
     width: 350px;
     height: 300px;
-    opacity: 90%;
+    border-radius: 30px;
+    border: 2px solid rgba(137, 43, 226, 0.623);
+    box-shadow: 5px 5px cadetblue;
 }
