--- a/src/App.css
+++ b/src/App.css
@@ -49,5 +49,5 @@ img{
     height: 300px;
     border-radius: 30px;
     border: 2px solid rgba(137, 43, 226, 0.623);
-    box-shadow: 5px 5px cadetblue;
+    box-shadow: 5px 5px rgba(125, 190, 192, 0.356);
 }
